-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.4.1
-
98849309a (dev)
Code using Math.max like in
Window {
id: root
width: 640
height: 480
visible: true
title: qsTr("Hello World")
property int maxi: Math.max(10, 20, 30)
}
compiles with
Warning: main.qml:16:29: Could not compile binding for maxi: Cannot generate efficient code for call to property 'max' of void of GlobalObject::Math with type Math [compile r] property int maxi: Math.max(10, 20, 30) ^^^
, while it works when using only two parameters.
| For Gerrit Dashboard: QTBUG-108741 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 460373,7 | QmlCompiler: Implement multi-argument Math.{min,max}() | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |